--- a/web/index.html
+++ b/web/index.html
@@ -24,18 +24,27 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div class="header">
+    <span id="header-span" class="header-text">reddit stats bot</span>
+  </div>
+  <div class="body">
+    <label for="subreddits-select">
+      <select name="subreddits" id="subreddits-select">
+        <option value="">-- Select a Subreddit --</option>
+      </select>
+    </label>
+    <label for="output">
+      <textarea readonly id="output" class="textarea-readonly" rows="25" cols="100"></textarea>
+    </label>
+    <span id="body-subtext" class="body-text" style="font-size: medium"></span>
+  </div>
+  <div class="footer">
+    <span id="footer-span" class="footer-text"></span>
+  </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
