--- a/web/index.html
+++ b/web/index.html
@@ -33,8 +33,12 @@
         <option value="">-- Select a Subreddit --</option>
       </select>
     </label>
+    <label for="search">
+      <input type="text" id="search" placeholder="Reddit username..."/>
+    </label>
     <label for="output">
-      <textarea readonly id="output" class="textarea-readonly" rows="25" cols="100"></textarea>
+      <!-- this textarea should not be a fixed width/height, need to figure out a better way -->
+      <textarea readonly id="output" class="textarea-readonly" rows="25" cols="30"></textarea>
     </label>
     <span id="body-subtext" class="body-text" style="font-size: medium"></span>
   </div>
