Fixed layout, added sorting

--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="footer">
-    <span id="footer-span" class="footer-text"></span>
+    <span id="footer-span" class="footer-text">Last updated:</span>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
