--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
