Added contact links to footer

--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,12 @@
     </div>
   </div>
   <div class="footer" id="footer-div">
-    <span id="footer-span" class="footer-text"></span>
+    <span id="footer-timestamp" class="footer-text"></span>
+    <span id="footer-contact" class="footer-text">
+      <a href="mailto:admin@redditstatsbot.com">Email me</a> or
+      <a href="https://www.reddit.com/message/compose?to=96dpi&subject=RedditStatsBot">message me on Reddit
+      </a> with any feedback!
+    </span>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
