Changed footer contact text

--- a/web/index.html
+++ b/web/index.html
@@ -59,7 +59,7 @@
     <span id="footer-contact" class="footer-text">
       <a href="mailto:admin@redditstatsbot.com">Email me</a> or
       <a href="https://www.reddit.com/message/compose?to=96dpi&subject=RedditStatsBot">message me on Reddit
-      </a> with any feedback!
+      </a> with any feedback, or if you'd like to contribute!
     </span>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
