--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js?=v1.0"></script>
 
 </body>
 
