Display search box after the tables are built

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
         <option value="0">-- Select a Subreddit --</option>
       </select>
     </div>
-    <div class="search-div" id="search-username-div">
+    <div class="search-div" id="search-username-div" style="visibility: hidden">
       <input type="text" id="search-box" onkeyup="filterInput()" placeholder="Search for username...">
     </div>
     <div class="table-div" id="output-table-div">
@@ -64,7 +64,7 @@
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js?=v1.0"></script>
+  <script src="js/main.js?=v1.1"></script>
 
 </body>
 
