--- a/web/index.html
+++ b/web/index.html
@@ -18,8 +18,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css?=v1.1">
-  <link rel="stylesheet" href="css/main.css?=v1.10">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -70,7 +70,7 @@
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js?=v1.3"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
