fix issues with scroll when searching users

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" href="icon.png">
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css?1703612215181">
+  <link rel="stylesheet" href="css/main.css?1703688028689">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -41,7 +41,7 @@
       </label>
     </div>
     <div class="search-div" id="search-username-div" style="visibility: hidden">
-      <input type="text" id="search-box" onkeyup="filterInput()" placeholder="Search for username...">
+      <input type="text" id="search-box" placeholder="Search for username...">
     </div>
     <div class="table-div" id="output-table-div">
       <table id="output-table">
@@ -69,7 +69,7 @@
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js?1703612232198"></script>
+  <script src="js/main.js?1703687682328"></script>
 
 </body>
 
