--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
     <div class="search-div" id="search-username-div" style="visibility: hidden">
       <input type="text" id="search-box" placeholder="Search for username...">
     </div>
-    <div class="table-div" id="output-table-div">
+    <div class="table-div" id="output-table-div" onscroll="scrollEvent()">
       <table id="output-table">
         <thead>
         <tr class="header">
